<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="welcome">Welcome</string>
    <string name="music_player">音乐播放器</string>
    <string name="music_count">当前目录共有&#160;%d&#160;首音乐</string>
    <string name="mp3_music_count">当前目录共有&#160;%d&#160;首&#160;MP3&#160;音乐</string>
    <string name="m4a_music_count">当前目录共有&#160;%d&#160;首&#160;M4A&#160;音乐</string>
    <string name="search">搜索</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="stuid">StuID：1711425</string>
    <string name="github">GitHub：LoveBettygirl</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="date">Date：May 10,&#160;&#160;2020</string>
    <string name="exit_program">再按一次退出程序</string>
    <string name="set_path">指定音乐路径</string>
    <string name="choose_path">选择音乐路径</string>
    <string name="all_path">显示SD卡中所有音乐</string>
    <string name="format_filter">音乐格式过滤</string>
    <string name="only_mp3">仅&#160;MP3</string>
    <string name="only_m4a">仅&#160;M4A</string>
    <string name="mp3_m4a">MP3&#160;/&#160;M4A</string>
    <string name="play_music">播放</string>
    <string name="music_info">查看详细信息</string>
    <string name="delete_music">删除</string>
    <string name="search_hint">按音乐文件名搜索</string>
    <string name="sdcard_permission">已获得外置存储访问授权</string>
    <string name="sdcard_not_permitted">外置存储访问未授权或不支持外置存储访问</string>
    <string name="delete_music_or_not">删除音乐</string>
    <string name="delete_music_info">此操作将删除文件%s，且无法撤回。是否继续？</string>
    <string name="unknown">未知</string>
    <string name="file_name_text">文件名：%s</string>
    <string name="file_format_text">音乐格式：%s</string>
    <string name="file_date_text">修改日期：%s</string>
    <string name="file_size_text">大小：%.2f&#160;MB</string>
    <string name="title_text">音乐标题：%s</string>
    <string name="artist_text">音乐人：%s</string>
    <string name="album_text">专辑名：%s</string>
    <string name="duration_text">时长：%s</string>
    <string name="abs_path_text">路径：%s</string>
    <string name="album_pic">专辑图片</string>
    <string name="music_details">音乐详细信息</string>
    <string name="play_music_error">音乐文件&#160;%s&#160;已损坏或系统播放器未正确安装</string>
    <string name="search_result">含有“%s”的音乐数：%d&#160;/&#160;%d</string>
</resources>
