<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_music_info"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/album_pic"
        android:layout_width="96dip"
        android:layout_height="96dip"
        android:src="@drawable/unknown_album_pic"
        android:layout_marginTop="15dip"
        android:layout_gravity="center"
        android:contentDescription="@string/album_pic" />
    <TextView
        android:id="@+id/file_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/file_name_text">
    </TextView>
    <TextView
        android:id="@+id/file_format_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/file_format_text">
    </TextView>
    <TextView
        android:id="@+id/file_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/file_date_text">
    </TextView>
    <TextView
        android:id="@+id/file_size_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/file_size_text">
    </TextView>
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/title_text">
    </TextView>
    <TextView
        android:id="@+id/artist_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/artist_text">
    </TextView>
    <TextView
        android:id="@+id/album_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/album_text">
    </TextView>
    <TextView
        android:id="@+id/duration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/duration_text">
    </TextView>
    <TextView
        android:id="@+id/abs_path_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/abs_path_text">
    </TextView>
</LinearLayout>