<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_about"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".AboutDialog">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/me_pic"
        android:layout_width="96dip"
        android:layout_height="96dip"
        android:src="@drawable/me"
        app:civ_border_width="2dip"
        android:layout_marginTop="10dip"
        android:layout_gravity="center"
        app:civ_border_color="@color/aboutColor"/>
    <TextView
        android:id="@+id/stuid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/stuid">
    </TextView>
    <TextView
        android:id="@+id/github_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/github">
    </TextView>
    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/date">
    </TextView>
    <Button
        android:id="@+id/about_yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_marginStart="23dip"
        android:layout_marginRight="10dip"
        android:layout_marginEnd="10dip"
        android:textSize="15sp"
        android:text="@string/yes"
        android:visibility="gone">
    </Button>
</LinearLayout>